--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
   "dependencies": {
     "bcrypt": "^3.0.0",
     "body-parser": "^1.18.3",
+    "connect-mongo": "^2.0.1",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
+    "express-session": "^1.15.6",
+    "handlebars": "^4.0.12",
+    "handlebars-intl": "^1.1.2",
     "method-override": "^3.0.0",
     "mongoose": "^5.2.14"
   },
