--- a/package.json
+++ b/package.json
@@ -1,31 +1,34 @@
 {
-  "name": "charity-tracker",
-  "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rimraf dist/ && babel ./ --out-dir dist/ --ignore ./node_modules,./.babelrc,./package.json,./npm-debug.log --copy-files",
-    "start": "nodemon --exec npx babel-node -- ./app.js"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "bcrypt": "^3.0.0",
-    "body-parser": "^1.18.3",
-    "connect-mongo": "^2.0.1",
-    "express": "^4.16.3",
-    "express-handlebars": "^3.0.0",
-    "express-session": "^1.15.6",
-    "handlebars": "^4.0.12",
-    "handlebars-intl": "^1.1.2",
-    "method-override": "^3.0.0",
-    "mongoose": "^5.2.14",
-    "request": "^2.88.0"
-  },
-  "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "rimraf": "^2.6.2"
-  }
+    "name": "charity-tracker",
+    "version": "1.0.0",
+    "description": "",
+    "main": "app.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "build": "rimraf dist/ && babel ./ --out-dir dist/ --ignore ./node_modules,./.babelrc,./package.json,./npm-debug.log --copy-files",
+        "start": "nodemon --exec npx babel-node -- ./app.js"
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "babel-preset-env": "^1.7.0",
+        "bcrypt": "^3.0.0",
+        "body-parser": "^1.18.3",
+        "connect-mongo": "^2.0.1",
+        "express": "^4.16.3",
+        "express-handlebars": "^3.0.0",
+        "express-session": "^1.15.6",
+        "handlebars": "^4.0.12",
+        "handlebars-intl": "^1.1.2",
+        "method-override": "^3.0.0",
+        "mongoose": "^5.2.14",
+        "request": "^2.88.0"
+    },
+    "devDependencies": {
+        "babel-cli": "^6.26.0",
+        "rimraf": "^2.6.2"
+    },
+    "engines": {
+        "node": "10.0.0"
+    }
 }
