--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "handlebars-intl": "^1.1.2",
         "method-override": "^3.0.0",
         "mongoose": "^5.2.14",
+        "nodemon": "^1.18.4",
         "request": "^2.88.0"
     },
     "devDependencies": {
