--- a/package.json
+++ b/package.json
@@ -4,14 +4,12 @@
     "description": "",
     "main": "app.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "build": "rimraf dist/ && babel ./ --out-dir dist/ --ignore ./node_modules,./.babelrc,./package.json,./npm-debug.log --copy-files",
-        "start": "nodemon --exec npx babel-node -- ./app.js"
+        "test": "mocha --require babel-core/register --exit test/*_spec.js",
+        "start": "babel-watch -w views app.js"
     },
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "babel-preset-env": "^1.7.0",
         "bcrypt": "^3.0.0",
         "body-parser": "^1.18.3",
         "connect-mongo": "^2.0.1",
@@ -21,15 +19,18 @@
         "handlebars": "^4.0.12",
         "handlebars-intl": "^1.1.2",
         "method-override": "^3.0.0",
-        "mongoose": "^5.2.14",
-        "nodemon": "^1.18.4",
+        "mongoose": "^5.3.1",
         "request": "^2.88.0"
     },
     "devDependencies": {
-        "babel-cli": "^6.26.0",
-        "rimraf": "^2.6.2"
+        "babel-core": "^6.26.3",
+        "babel-preset-env": "^1.7.0",
+        "babel-watch": "^2.0.7",
+        "chai": "^4.2.0",
+        "chai-http": "^4.2.0",
+        "mocha": "^5.2.0"
     },
     "engines": {
-        "node": "10.0.0"
+        "node": "10.11.0"
     }
 }
